Including a dirty test but an initial test nevertheless. Also including minimum pre-existing classes

--- a/TestsWithAi/Tests/Acceptance/Acceptance.csproj
+++ b/TestsWithAi/Tests/Acceptance/Acceptance.csproj
@@ -17,4 +17,10 @@
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
